Refactor main script to use DNS validation and also check the TXT records before letting ACME attempt the authentication/validation. Improve also the script's output/logging.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
+    "minimum-stability": "dev",
     "require": {
-        "fortytwo-studio/webfaction-php": "^1.1"
+        "fortytwo-studio/webfaction-php": "^1.1",
+        "acmephp/core": "1.0.0-beta4"
     }
 }
